# mdp-17

./: README.md  ganttchart.gan
mirte_base_station/: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  LABGROUP.md  README.md  git_zip.sh  local_setup_ip.bash  setup_ip.bash  ssh_mirte.bash  tebbackup.cfg
mirte_base_station/.devcontainer/: Dockerfile  devcontainer.json
mirte_base_station/.devcontainer/opt/toolkit/: powerline-shell.sh  toolkit.sh
mirte_base_station/.devcontainer/vscode/: .bashrc
mirte_base_station/src/frontier_exploration/config/: params.yaml
mirte_base_station/src/frontier_exploration/src/: costmap_client.cpp  explore.cpp
mirte_base_station/src/mirte-clean/: CMakeLists.txt  package.xml
mirte_base_station/src/mirte-clean/launch/: activate_localization.launch  activate_map_server.launch  activate_mapping.launch  full_local.launch  nostate_local.launch  state_control.launch
mirte_base_station/src/mirte-clean/src/: darp.py  exploration.py  slam.py  state_control.py  test.py
mirte_base_station/src/rviz_plugin_interface/: CMakeLists.txt  package.xml  rviz_plugins.xml
mirte_base_station/src/rviz_plugin_interface/include/: rviz_plugin.h
mirte_base_station/src/rviz_plugin_interface/src/: rviz_plugin.cpp
mirte_base_station/src/slam_toolbox/config/: mapper_params_mirte_localization.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
mirte_base_station/src/slam_toolbox/src/: slam_toolbox_common.cpp  slam_toolbox_localization.cpp
mirte_robot_src/laser_filter_cfg/cfg/: filter.yaml
mirte_robot_src/mirte_clean_robot/: package.xml
mirte_robot_src/mirte_clean_robot/cfg/: StopForObstacles.cfg
mirte_robot_src/mirte_clean_robot/launch/: pid_control.launch.backup  pid_control_path_pub_stop.launch
mirte_robot_src/ridgeback/ridgeback_navigation/: package.xml
mirte_robot_src/teb_local_planner/src/: teb_local_planner_ros.cpp
mirte_robot_src/teb_local_planner_config/launch/: robot_omnidir_in_stage.launch
mirte_robot_src/tracking_pid/: pid_control.launch
mirte_robot_src/tracking_pid/cfg/: Pid.cfg
mirte_robot_src/tracking_pid/trajectories/: zigzag_short.yaml
mirte_src/dwa_local_planner_cfg/: CMakeLists.txt
mirte_src/dwa_local_planner_cfg/cfg/: neo_planner.yaml
mirte_src/dwa_local_planner_cfg/launch/: pid_control_path_pub.launch
mirte_src/mirte-clean-robot/: CMakeLists.txt  package.xml
mirte_src/mirte-clean-robot/src/: stop_for_obstacles.py
mirte_src/mirte-ros-packages/mirte_bringup/: package.xml
mirte_src/mirte_clean_robot/: CMakeLists.txt
mirte_src/mirte_clean_robot/launch/: full_robot.launch  full_robot_old.launch  pid_control.launch  pid_control_path_pub.launch
mirte_src/mirte_clean_robot/src/: stop_for_obstacles.py
mirte_src/ridgeback/ridgeback_navigation/: package.xml
mirte_src/src/dwa_local_planner_cfg/: package.xml
mirte_src/src/laser_filter_cfg/: CMakeLists.txt  package.xml
mirte_src/tracking_pid/src/: controller.cpp
(+32 files in other folders)
