<package format="2">
  <name>rviz_plugin_interface</name>
  <description>
     This package provides a sped up improved slam karto with updated SDK and visualization and modification toolsets
  </description>
  <version>1.5.6</version>
  <maintainer email="lohani.manan@gmail.com">Manan Lohani</maintainer>
  <author>Manan Lohani</author>
  <license>LGPL</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>qtbase5-dev</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>

</package>
